--- a/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -132,6 +132,7 @@
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\CustomContent\CustomStyle.scss" />
     <Content Include="Content\CustomContent\variables.scss" />
+    <Content Include="connectionStrings.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
