--- a/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -124,15 +124,26 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\CustomContent\CustomStyle.css" />
+    <Content Include="Content\img\products\chess\blingblingking.jpg" />
+    <Content Include="Content\img\products\chess\humanchessboard.jpg" />
+    <Content Include="Content\img\products\chess\thinkingcap.jpg" />
+    <Content Include="Content\img\products\chess\unsteadychair.jpg" />
+    <Content Include="Content\img\products\soccer\cornerflag.jpg" />
+    <Content Include="Content\img\products\soccer\soccerball.jpg" />
+    <Content Include="Content\img\products\soccer\stadium.jpg" />
+    <Content Include="Content\img\products\watersports\kayak.jpeg" />
+    <Content Include="Content\img\products\watersports\lifejacket.jpeg" />
     <Content Include="Content\Site.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
+    <Content Include="Gruntfile.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\CustomContent\CustomStyle.scss" />
     <Content Include="Content\CustomContent\variables.scss" />
     <Content Include="connectionStrings.config" />
+    <Content Include="Content\CustomContent\functions.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
