--- a/SportsStore.WebUI/package.json
+++ b/SportsStore.WebUI/package.json
@@ -7,8 +7,12 @@
   "author": "Redocram",
   "license": "MIT",
   "dependencies": {
+    "browser-sync": "^2.23.6",
     "grunt": "^1.0.2",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-watch": "^1.0.0"
+  },
+  "devDependencies": {
+    "grunt-browser-sync": "^2.2.0"
   }
 }
