--- a/SportsStore.WebUI/SportsStore.WebUI.csproj
+++ b/SportsStore.WebUI/SportsStore.WebUI.csproj
@@ -121,7 +121,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\CustomContent\CustomStyle.css" />
     <Content Include="Content\img\products\chess\blingblingking.jpg" />
     <Content Include="Content\img\products\chess\humanchessboard.jpg" />
     <Content Include="Content\img\products\chess\thinkingcap.jpg" />
@@ -137,10 +136,11 @@
     <Content Include="Gruntfile.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
-    <Content Include="Content\CustomContent\CustomStyle.scss" />
-    <Content Include="Content\CustomContent\variables.scss" />
+    <Content Include="Content\Css\Sass\2-layout\layout.scss" />
+    <Content Include="Content\Css\Sass\0-variables\variables.scss" />
     <Content Include="connectionStrings.config" />
-    <Content Include="Content\CustomContent\functions.scss" />
+    <Content Include="Content\Css\Sass\1-mixins\mixins-styling.scss" />
+    <Content Include="Content\Css\Sass\1-mixins\mixins-media-queries.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
