--- a/SportsStore.WebUI/package.json
+++ b/SportsStore.WebUI/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-watch": "^1.0.0"
   },
   "devDependencies": {
-    "grunt-browser-sync": "^2.2.0"
+    "grunt-browser-sync": "^2.2.0",
+    "grunt-sass": "^2.1.0"
   }
 }
